@@ -2,13 +2,11 @@ package llb.tdd.di;
 
 import jakarta.inject.Inject;
 
-import java.io.File;
 import java.lang.reflect.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
@@ -23,12 +21,12 @@ import static java.util.stream.Stream.*;
  * @ProjectName 01-di-container
  * @Version V1.0
  */
-class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
+class InjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
     private Constructor<T> injectConstructor;
     private List<Field> injectFields;
     private List<Method> injectMethods;
 
-    public ConstructorInjectionProvider(Class<T> component) {
+    public InjectionProvider(Class<T> component) {
         if (Modifier.isAbstract(component.getModifiers())) {
             throw new IllegalComponentException();
         }
@@ -47,14 +45,12 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
     @Override
     public T get(Context context) {
         try {
-            Object[] dependencies = stream(injectConstructor.getParameters()).map(p -> context.get(p.getType()).get()).toArray(Object[]::new);
-            T instance = injectConstructor.newInstance(dependencies);
+            T instance = injectConstructor.newInstance(toDependencies(context, injectConstructor));
             for (Field field : injectFields) {
-                field.set(instance, context.get(field.getType()).get());
+                field.set(instance, toDependency(context, field));
             }
             for (Method method : injectMethods) {
-                method.invoke(instance, stream(method.getParameterTypes()).map(t -> context.get(t).get())
-                        .toArray(Object[]::new));
+                method.invoke(instance, toDependencies(context, method));
             }
             return instance;
         } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
@@ -74,41 +70,71 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
         List<Method> injectMethods = new ArrayList<>();
         Class<?> current = component;
         while (current != Object.class) {
-            injectMethods.addAll(stream(current.getDeclaredMethods()).filter(m -> m.isAnnotationPresent(Inject.class))
-                            .filter(m -> injectMethods.stream().noneMatch(o -> o.getName().equals(m.getName()) &&
-                                    Arrays.equals(o.getParameterTypes(), m.getParameterTypes())))
-                            .filter(m -> stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class))
-                                    .noneMatch(o -> o.getName().equals(m.getName()) &&
-                                            Arrays.equals(o.getParameterTypes(), m.getParameterTypes())))
-                    .toList());
+            injectMethods.addAll(getC(component, injectMethods, current));
             current = current.getSuperclass();
         }
         Collections.reverse(injectMethods);
         return injectMethods;
     }
 
+    private static <T> List<Method> getC(Class<T> component, List<Method> injectMethods, Class<?> current) {
+        return injectable(current.getDeclaredMethods())
+                .filter(m -> isOverrideByInjectMethod(injectMethods, m))
+                .filter(m -> isOverrideByNoInjectMethod(component, m))
+                .toList();
+    }
+
     private static <T> List<Field> getInjectFields(Class<T> component) {
         List<Field> injectFields = new ArrayList<>();
         Class<?> current = component;
         while (current != Object.class) {
-            injectFields.addAll(stream(current.getDeclaredFields()).filter(f -> f.isAnnotationPresent(Inject.class))
-                    .toList());
+            injectFields.addAll(getC(current));
             current = current.getSuperclass();
         }
         return injectFields;
     }
 
+    private static List<Field> getC(Class<?> current) {
+        return injectable(current.getDeclaredFields()).toList();
+    }
+
     private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
-        List<Constructor<?>> injectConstructors = stream(implementation.getConstructors()).filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+        List<Constructor<?>> injectConstructors = injectable(implementation.getConstructors()).toList();
         if (injectConstructors.size() > 1) {
             throw new IllegalComponentException();
         }
-        return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> {
-            try {
-                return implementation.getDeclaredConstructor();
-            } catch (NoSuchMethodException e) {
-                throw new IllegalComponentException();
-            }
-        });
+        return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> defaultConstructor(implementation));
+    }
+
+    private static <Type> Constructor<Type> defaultConstructor(Class<Type> implementation) {
+        try {
+            return implementation.getDeclaredConstructor();
+        } catch (NoSuchMethodException e) {
+            throw new IllegalComponentException();
+        }
+    }
+
+    private static <T extends AnnotatedElement> Stream<T> injectable(T[] declaredFields) {
+        return stream(declaredFields).filter(f -> f.isAnnotationPresent(Inject.class));
+    }
+
+    private static boolean isOverride(Method m, Method o) {
+        return o.getName().equals(m.getName()) && Arrays.equals(o.getParameterTypes(), m.getParameterTypes());
+    }
+
+    private static <T> boolean isOverrideByNoInjectMethod(Class<T> component, Method m) {
+        return stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class)).noneMatch(o -> isOverride(m, o));
+    }
+
+    private static boolean isOverrideByInjectMethod(List<Method> injectMethods, Method m) {
+        return injectMethods.stream().noneMatch(o -> isOverride(m, o));
+    }
+
+    private static Object[] toDependencies(Context context, Executable executable) {
+        return stream(executable.getParameterTypes()).map(t -> context.get(t).get()).toArray(Object[]::new);
+    }
+
+    private static Object toDependency(Context context, Field field) {
+        return context.get(field.getType()).get();
     }
 }
